// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deposit into existing position: depositBase 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 132959,
}
`;

exports[`Deposit into existing position: depositQuote 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 134620,
}
`;

exports[`Liquidation liquidate long position and create new long position 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 283201,
}
`;

exports[`Liquidation liquidate long position and create new position 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 301732,
}
`;

exports[`Liquidation liquidate short position and create new position 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 313758,
}
`;

exports[`Liquidation liquidate short position and create new short position 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 299180,
}
`;

exports[`Open position: depositBase 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 233315,
}
`;

exports[`Open position: depositQuote 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 234222,
}
`;

exports[`System initialized: closePosition 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 268061,
}
`;

exports[`System initialized: depositBase 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 217782,
}
`;

exports[`System initialized: depositBase and long 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 366791,
}
`;

exports[`System initialized: depositQuote 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 217898,
}
`;

exports[`System initialized: depositQuote and short 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 347333,
}
`;

exports[`System initialized: long 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 310049,
}
`;

exports[`System initialized: long with flip 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 348821,
}
`;

exports[`System initialized: sellCollateral 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 297693,
}
`;

exports[`System initialized: short 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 290414,
}
`;

exports[`System initialized: short with flip 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 335692,
}
`;

exports[`System initialized: withdrawBase 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 180042,
}
`;

exports[`System initialized: withdrawQuote 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 202327,
}
`;

exports[`mc happens: MC long position with deleverage 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 252894,
}
`;

exports[`mc happens: MC long reinit 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 218284,
}
`;

exports[`mc happens: MC short position with deleverage 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 254525,
}
`;

exports[`mc happens: MC short reinit 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 220696,
}
`;

exports[`mc happens: closePosition with two mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 393621,
}
`;

exports[`mc happens: depositBase with one mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 270944,
}
`;

exports[`mc happens: depositBase with two mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 386109,
}
`;

exports[`mc happens: depositQuote with one mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 271019,
}
`;

exports[`mc happens: depositQuote with two mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 299387,
}
`;

exports[`mc happens: long closePosition with one mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 225734,
}
`;

exports[`mc happens: long initialized heap with one mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 281245,
}
`;

exports[`mc happens: long sellCollateral with one mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 225366,
}
`;

exports[`mc happens: long with one mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 377091,
}
`;

exports[`mc happens: long with two mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 410193,
}
`;

exports[`mc happens: sellCollateral with two mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 389486,
}
`;

exports[`mc happens: short with one mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 345809,
}
`;

exports[`mc happens: short with two mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 407161,
}
`;
